[tool.poetry]
name = "random-stuff"
version = "0.1.0"
description = ""
authors = ["ljhamelia <amelia@dsaid.gov.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<4"
streamlit = "^1.30.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
